Added Android base project and .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
+############
+## Server ##
+
 Server/data
 Server/node_modules
+
+#####################
+## For Android App ##
+
+*.iml
+.gradle
+local.properties
+#.idea/workspace.xml
+#.idea/libraries
+.idea
+.DS_Store
+build
+captures
+
+#built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Windows thumbnail db
+Thumbs.db
