Adding new server with express

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 ###############################################
 #################
+####### New Server
+Server-New/node_modules
+
+
+###############################################
+#################
 ####### Server 
 
 # Exclude database
